<resources>
    <string name="app_name">t3a1-Rodriguez-Alejandro</string>
    <string name="cupcakes">Cupcakes</string>
    <string name="autor">Autor</string>
    <string name="descripcion">Descripción</string>
    <string name="contenido_descripcion">una receta ideal para iniciarse con los cupcakes, con la que preparar unos ricos cupcakes de vainilla con cobertura de buttercream, cobertura de la que os proponemos tres versiones.</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="contenido_Ingredientes">- 165 gramos de harina de reposteria \n- 165 gramos de mantequilla sin sal \n - 165 gramos de azúcar \n - 15 ml de esencia de vainilla \n -50 ml de leche \n - 5 gramos de levadura \n - 3 huevos medianos</string>
    <string name="receta">Receta</string>
    <string name="contenido_receta">Una vez que tengamos el horno en marcha, y todos nuestros ingredientes medidos y pesados, vamos a comenzar a preparar la base de nuestros cupcakes. Nosotros empleamos una amasadora automática, pero se puede emplear también unas varillas manuales o un robot de cocina, lo que os resulte más cómodo dentro de lo que dispongáis.</string>
    <string name="imagen_receta">receta</string>
    </resources>