<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_gray"
    >

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <!-- Imagen -->
    <ImageView

        android:id="@+id/imagen"
        android:contentDescription="@string/imagen_receta"
        android:src="@drawable/cupcakes"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintWidth_percent="1"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        />

    <!-- Titulo -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/cupcakes"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Autor -->
    <TextView
        android:id="@+id/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/autor"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        />

    <!-- Descripcion -->
    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/descripcion"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagen"
        />

    <TextView
        android:id="@+id/contenido_descripcion"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:text="@string/contenido_descripcion"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/descripcion"
        app:layout_constraintStart_toStartOf="@id/descripcion"
        app:layout_constraintEnd_toEndOf="@id/guideline2"

        />

    <!-- Ingredientes -->
    <TextView
        android:id="@+id/ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/ingredientes"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/imagen"
        />

    <TextView
        android:id="@+id/contenido_ingredientes"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginTop="8dp"
        android:text="@string/contenido_Ingredientes"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ingredientes"
        app:layout_constraintStart_toStartOf="@id/ingredientes"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Ingredientes -->
    <TextView
        android:id="@+id/receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receta"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/contenido_descripcion"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/receta_descripcion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contenido_receta"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receta" />


</androidx.constraintlayout.widget.ConstraintLayout>
